# glimpse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  glimpse-indexer.service  glimpse-monitor.service  install.sh  log.txt  prober-indexer.service  th06e.cfg  uninstall.sh
.github/workflows/: release.yml
src/: biases.rs  config.rs  file_index.rs  indexing.rs  lib.rs  main.rs  notif.rs  prelude.rs  result_templates.rs  search.rs  string_similarity.rs  tfidf.rs  utils.rs
src/applet/: app.rs  biases.rs  exec.rs  icon.rs  main.rs  prelude.rs  preview_window.rs  result_templates.rs  search.rs  utils.rs
src/applet/search_modules/: calculator.rs  commands.rs  dictionary.rs  files.rs  mod.rs  steam_games.rs  template.rs  web_bookmarks.rs
src/db/: allocator.rs  hashmap.rs  hashmap_db.rs  list.rs  mod.rs  session.rs  string.rs  string_search_db.rs  trie.rs
src/db_old/: hashmap.rs  linked_list.rs  mod.rs  string.rs  trie.rs
src/indexer/: main.rs
src/monitor/: main.rs
src/search_modules/: commands.rs  dictionary.rs  mod.rs  steam_games.rs
themes/: pink.css  rounded_borders.css  smaller.css  thick_boxy.css
