[package]
name = "glimpse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glimpse"
path = "src/applet/main.rs"

[[bin]]
name = "glimpse-indexer"
path = "src/indexer/main.rs"

# [profile.release]
# debug = true

[dependencies]
async-trait = "0.1.71"
bytes = "1.4.0"
chrono = "0.4.26"
docx-rs = "0.4.7"
execute = "0.2.12"
futures = "0.3.28"
gdk = "0.17.1"
gdk-sys = "0.17.0"
gtk = "0.17.1"
home = "0.5.5"
http = "0.2.9"
infer = "0.15.0"
lopdf = "0.31.0"
once_cell = "1.18.0"
pango = "0.17.10"
# poppler = "0.3.2"
rand = "0.8.5"
reqwest = "0.11.18"
savefile = { version = "0.13.0", features = [ "bzip2" ] }
savefile-derive = "0.13.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_toml = "0.0.1"
sqlite = "0.31.0"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
url = "2.4.0"
