[package]
name = "glimpse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glimpse"
path = "src/applet/main.rs"

[[bin]]
name = "glimpse-indexer"
path = "src/indexer/main.rs"

[[bin]]
name = "glimpse-monitor"
path = "src/monitor/main.rs"

# [profile.release]
# debug = true

[features]
default = ["app"]
app = [
    "dep:gtk",
    "dep:gdk",
    "dep:gdk-sys",
    "dep:pango",
    "dep:sqlite",
    "dep:clipboard",
]

[dependencies]
async-trait = "0.1.71"
bytes = "1.4.0"
chrono = "0.4.26"
clipboard = { version = "0.5.0", optional = true }
docx-rs = "0.4.7"
execute = "0.2.12"
futures = "0.3.28"
gdk = { version = "0.18.0", optional = true }
gdk-sys = { version = "0.18.0", optional = true }
gtk = { version = "0.18.1", optional = true }
home = "0.5.5"
http = "0.2.9"
infer = "0.15.0"
lopdf = "0.31.0"
memmap = "0.7.0"
notify = "6.1.1"
once_cell = "1.18.0"
pango = { version = "0.18.0", optional = true }
# poppler = "0.3.2"
rand = "0.8.5"
random = "0.14.0"
reqwest = "0.11.18"
savefile = { version = "0.16.2", features = ["bzip2"] }
savefile-derive = "0.16.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_toml = "0.0.1"
sqlite = { version = "0.31.0", optional = true }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.2"
url = "2.4.0"
